feat::> Settings DONE

--- a/Bustle/GUI_Rust/2.Settings.md
+++ b/Bustle/GUI_Rust/2.Settings.md
@@ -99,3 +99,15 @@ We assure that the switch state is stored in the settings whenever we click on i
 ```
 
 The `Switch` now retains its state even after closing the application. But we can make this even better. The `Switch` has a property "active" and `Settings` allows us to bind properties to a specific setting. So let's do exactly that.
+
+We can remove the `boolean` call before initializing the `Switch` as well as the `connect_state_set` call. We then bind the setting to the property by specifying the key, object and name of the property.
+
+`Filesystem`: ...../settings/2/main.rs
+
+```rust
+    settings
+        .bind("is-switch-enabled", &switch, "active")
+        .build();
+```
+
+Whenever we have a property which nicely correspond to a setting, you probably want to bind it to it. In other cases, interacting with the settings via the getter and setter methods tends to be the right choice.
