feat::> Saving Window State DONE...

--- a/Bustle/GUI_Rust/3.SavingWindow.md
+++ b/Bustle/GUI_Rust/3.SavingWindow.md
@@ -110,3 +110,55 @@ impl Window {
     }
 }
 ```
+
+<details>
+<summary>NOTE</summary>
+
+```
+We set the property "application" by passing it to `glib::Object::new`. You can even set multiple properties that way. When creating new GObjects, this is nicer than calling the setter methods manually.
+```
+
+</details>
+
+The implementation struct holds the `settings`. You can see that we embed Settings in `std::cell::OnceCell`. This is a nice alternative to `RefCell<Option<T>>` when you know that you will initialize the value only once.
+
+We also override the `constructed` and `close_request` methods, where we load or save the window state.
+
+`Filesystem`: ...../saving_window_state/1/custom_window/imp.rs
+
+```rust
+#[derive(Default)]
+pub struct Window {
+    pub settings: OnceCell<Settings>,
+}
+
+#[glib::object_subclass]
+impl ObjectSubclass for Window {
+    const NAME: &'static str = "MyGtkAppWindow";
+    type Type = super::Window;
+    type ParentType = ApplicationWindow;
+}
+impl ObjectImpl for Window {
+    fn constructed(&self) {
+        self.parent_constructed();
+        // Load latest window state
+        let obj = self.obj();
+        obj.setup_settings();
+        obj.load_window_size();
+    }
+}
+impl WidgetImpl for Window {}
+impl WindowImpl for Window {
+    // Save window state right before the window will be closed
+    fn close_request(&self) -> glib::Propagation {
+        // Save window size
+        self.obj()
+            .save_window_size()
+            .expect("Failed to save window state");
+        // Allow to invoke other event handlers
+        glib::Propagation::Proceed
+    }
+}
+impl ApplicationWindowImpl for Window {}
+```
+* Now our window retains its state between app sessions.
