feat::> List Widget > View mid...

--- a/Bustle/GUI_Rust/4.ListWidgets.md
+++ b/Bustle/GUI_Rust/4.ListWidgets.md
@@ -46,3 +46,50 @@ We use scalable lists instead!
 * The **model** holds our data, filters it and describes its order.
 * The **list item factory** defines how the data transforms into widgets.
 * The **view** specifies how the widgets are then arranged.
+
+We start by defining and filling up our model. The model is an instance of `gio::ListStore`. The main limitation here is that `gio::ListStore` only accepts GObjects. So let's create a custom GObject `IntegerObject` that which is initialized with a number.
+
+`Filesystem`: ...../list_widgets/2/integer_object/mod.rs
+
+```rust
+glib::wrapper! {
+    pub struct IntegerObject(ObjectSubclass<imp::IntegerObject>);
+}
+
+impl IntegerObject {
+    pub fn new(number: i32) -> Self {
+        Object::builder().property("number", number).build()
+    }
+}
+```
+
+* This number represents the internal state of `IntegerObject`.
+
+`Filesystem`: ...../list_widgets/2/integer_object/imp.rs
+
+```rust
+// Object holding the state
+#[derive(Properties, Default)]
+#[properties(wrapper_type = super::IntegerObject)]
+pub struct IntegerObject {
+    #[property(get, set)]
+    number: Cell<i32>,
+}
+```
+
+We now fill the model with integers from 0 to 100 000. Please note that models only takes care of the data. Neither `Label` nor any other widget is mentioned here.
+
+`Filesystem`: ...../list_widgets/2/main.rs
+
+```rust
+    // Create a `Vec<IntegerObject>` with numbers from 0 to 100_000
+    let vector: Vec<IntegerObject> = (0..=100_000).map(IntegerObject::new).collect();
+
+    // Create new model
+    let model = gio::ListStore::new::<IntegerObject>();
+
+    // Add the vector to the model
+    model.extend_from_slice(&vector);
+```
+
+The `ListItemFactory` takes care of the widgets as well as their relationship to the model. Here, we use the `SignalListItemFactory` which emits a signal for every relevant step in the life of a `ListItem`. The "setup" signal will be emitted when new widgets have to be created. We connect to it to create a `Label` for every requested widget.
