feat::> List Widget > View > increase function...

--- a/Bustle/GUI_Rust/4.ListWidgets.md
+++ b/Bustle/GUI_Rust/4.ListWidgets.md
@@ -93,3 +93,93 @@ We now fill the model with integers from 0 to 100 000. Please note that models o
 ```
 
 The `ListItemFactory` takes care of the widgets as well as their relationship to the model. Here, we use the `SignalListItemFactory` which emits a signal for every relevant step in the life of a `ListItem`. The "setup" signal will be emitted when new widgets have to be created. We connect to it to create a `Label` for every requested widget.
+
+`Filesystem`: ...../list_widgets/2/main.rs
+
+```rust
+    let factory = SignalListItemFactory::new();
+    factory.connect_setup(move |_, list_item| {
+        let label = Label::new(None);
+        list_item
+            .downcast_ref::<ListItem>()
+            .expect("Needs to be ListItem")
+            .set_child(Some(&label));
+    });
+```
+
+In the "bind" step we bind the data in our model to the individual list items.
+
+`Filesystem`: ...../list_widgets/2/main.rs
+
+```rust
+    factory.connect_bind(move |_, list_item| {
+        // Get `IntegerObject` from `ListItem`
+        let integer_object = list_item
+            .downcast_ref::<ListItem>()
+            .expect("Needs to be ListItem")
+            .item()
+            .and_downcast::<IntegerObject>()
+            .expect("The item has to be an `IntegerObject`.");
+
+        // Get `Label` from `ListItem`
+        let label = list_item
+            .downcast_ref::<ListItem>()
+            .expect("Needs to be ListItem")
+            .child()
+            .and_downcast::<Label>()
+            .expect("The child has to be a `Label`.");
+
+        // Set "label" to "number"
+        label.set_label(&integer_object.number().to_string());
+    });
+```
+
+We only want single items to be selectable, so we choose `SingleSelection`. The other options would have been `MultiSelection` or `NoSelection`. Then we pass the model and the factory to the `ListView`.
+
+`Filesystem`: ...../list_widgets/2/main.rs
+
+```rust
+    let selection_model = SingleSelection::new(Some(model));
+    let list_view = ListView::new(Some(selection_model), Some(factory));
+```
+
+Every `ListView` has to be a direct child of a `ScrolledWindow`, so we are adding it to one.
+
+`Filesystem`: ...../list_widgets/2/main.rs
+
+```rust
+    let scrolled_window = ScrolledWindow::builder()
+        .hscrollbar_policy(PolicyType::Never) // Disable horizontal scrolling
+        .min_content_width(360)
+        .child(&list_view)
+        .build();
+
+    // Create a window
+    let window = ApplicationWindow::builder()
+        .application(app)
+        .title("My GTK App")
+        .default_width(600)
+        .default_height(300)
+        .child(&scrolled_window)
+        .build();
+
+    // Present window
+    window.present();
+```
+
+We might want to increase the number every time we activate its row. For that we first add the method `increase_number` to our `IntegerObject`.
+
+`Filesystem`: ...../list_widgets/3/integer_object/mod.rs
+
+```rust
+impl IntegerObject {
+    pub fn new(number: i32) -> Self {
+        Object::builder().property("number", number).build()
+    }
+
+    pub fn increase_number(self) {
+        self.set_number(self.number() + 1);
+    }
+}
+```
+
