feat::> List Widget > View End...

--- a/Bustle/GUI_Rust/4.ListWidgets.md
+++ b/Bustle/GUI_Rust/4.ListWidgets.md
@@ -183,3 +183,50 @@ impl IntegerObject {
 }
 ```
 
+In order to interact with our `ListView`, we connect to its "activate" signal.
+
+`Filesystem`: ...../list_widgets/3/main.rs
+
+```rust
+    list_view.connect_activate(move |list_view, position| {
+        // Get `IntegerObject` from model
+        let model = list_view.model().expect("The model has to exist.");
+        let integer_object = model
+            .item(position)
+            .and_downcast::<IntegerObject>()
+            .expect("The item has to be an `IntegerObject`.");
+
+        // Increase "number" of `IntegerObject`
+        integer_object.increase_number();
+    });
+```
+
+Now every time we activate an element, for example by double-clicking on it, the corresponding "number" property of the `IntegerObject` in the model will be increased by 1. However, just because the `IntegerObject` has been modified the corresponding `Label` does not immediately change. One naive approach would be to bind the properties in the "bind" step of the `SignalListItemFactory`.
+
+`Filesystem`: ...../list_widgets/3/main.rs
+
+```rust
+    factory.connect_bind(move |_, list_item| {
+        // Get `IntegerObject` from `ListItem`
+        let integer_object = list_item
+            .downcast_ref::<ListItem>()
+            .expect("Needs to be ListItem")
+            .item()
+            .and_downcast::<IntegerObject>()
+            .expect("The item has to be an `IntegerObject`.");
+
+        // Get `Label` from `ListItem`
+        let label = list_item
+            .downcast_ref::<ListItem>()
+            .expect("Needs to be ListItem")
+            .child()
+            .and_downcast::<Label>()
+            .expect("The child has to be a `Label`.");
+
+        // Bind "label" to "number"
+        integer_object
+            .bind_property("number", &label, "label")
+            .sync_create()
+            .build();
+    });
+```
