feat::> List Widget > Expression Start...

--- a/Bustle/GUI_Rust/4.ListWidgets.md
+++ b/Bustle/GUI_Rust/4.ListWidgets.md
@@ -230,3 +230,6 @@ Now every time we activate an element, for example by double-clicking on it, the
             .build();
     });
 ```
+## **Expression**
+
+>> Situations like these are so common that GTK offers an alternative to property binding: expressions. As a first step it allows us to remove the "bind" step. Let's see how the "setup" step now works.
