--- a/Bustle/GUI_Rust/4.ListWidgets.md
+++ b/Bustle/GUI_Rust/4.ListWidgets.md
@@ -233,3 +233,67 @@ Now every time we activate an element, for example by double-clicking on it, the
 ## **Expression**
 
 >> Situations like these are so common that GTK offers an alternative to property binding: expressions. As a first step it allows us to remove the "bind" step. Let's see how the "setup" step now works.
+
+`Filesystem`: ...../list_widgets/4/main.rs
+
+```rust
+    factory.connect_setup(move |_, list_item| {
+        // Create label
+        let label = Label::new(None);
+        let list_item = list_item
+            .downcast_ref::<ListItem>()
+            .expect("Needs to be ListItem");
+        list_item.set_child(Some(&label));
+
+        // Bind `list_item->item->number` to `label->label`
+        list_item
+            .property_expression("item")
+            .chain_property::<IntegerObject>("number")
+            .bind(&label, "label", Widget::NONE);
+    });
+```
+
+An expression provides a way to describe references to values. One interesting part here is that these references can be several steps away. This allowed us in the snippet above to bind the property "number" of the property "item" of `list_item` to the property "label" of `label`.
+
+It is also worth noting that at the "setup" stage there is no way of knowing which list item belongs to which label, simply because this changes as we scroll through the list. Here, another power of expressions becomes evident.<br>Expressions allow us to describe relationships between objects or properties that might not even exist yet. We just had to tell it to change the label whenever the number that belongs to it changes. That way, we also don't face the problem that multiple labels are bound to the same number. When we now activate a label, only the corresponding number visibly changes.
+
+We can filter our model to only allow even numbers. We do that by passing it to a `gtk::FilterListModel` together with a `gtk::CustomFilter`
+
+`Filesystem`: ...../list_widgets/5/main.rs
+
+```rust
+    let filter = CustomFilter::new(move |obj| {
+        // Get `IntegerObject` from `glib::Object`
+        let integer_object = obj
+            .downcast_ref::<IntegerObject>()
+            .expect("The object needs to be of type `IntegerObject`.");
+
+        // Only allow even numbers
+        integer_object.number() % 2 == 0
+    });
+    let filter_model = FilterListModel::new(Some(model), Some(filter.clone()));
+```
+
+Additionally, we can reverse the order of our model. Now we pass the filtered model to `gtk::SortListModel` together with `gtk::CustomSorter`.
+
+`Filesystem`: ...../list_widgets/5/main.rs
+
+```rust
+    let sorter = CustomSorter::new(move |obj1, obj2| {
+        // Get `IntegerObject` from `glib::Object`
+        let integer_object_1 = obj1
+            .downcast_ref::<IntegerObject>()
+            .expect("The object needs to be of type `IntegerObject`.");
+        let integer_object_2 = obj2
+            .downcast_ref::<IntegerObject>()
+            .expect("The object needs to be of type `IntegerObject`.");
+
+        // Get property "number" from `IntegerObject`
+        let number_1 = integer_object_1.number();
+        let number_2 = integer_object_2.number();
+
+        // Reverse sorting order -> large numbers come first
+        number_2.cmp(&number_1).into()
+    });
+    let sort_model = SortListModel::new(Some(filter_model), Some(sorter.clone()));
+```
