feat::> List Widget > Expression Done...

--- a/Bustle/GUI_Rust/4.ListWidgets.md
+++ b/Bustle/GUI_Rust/4.ListWidgets.md
@@ -297,3 +297,25 @@ Additionally, we can reverse the order of our model. Now we pass the filtered mo
     });
     let sort_model = SortListModel::new(Some(filter_model), Some(sorter.clone()));
 ```
+
+To ensure that our filter and sorter get updated when we modify the numbers, we call the changed method on them.
+
+`Filesystem`: ...../list_widgets/5/main.rs
+
+```rust
+    list_view.connect_activate(move |list_view, position| {
+        // Get `IntegerObject` from model
+        let model = list_view.model().expect("The model has to exist.");
+        let integer_object = model
+            .item(position)
+            .and_downcast::<IntegerObject>()
+            .expect("The item has to be an `IntegerObject`.");
+
+        // Increase "number" of `IntegerObject`
+        integer_object.increase_number();
+
+        // Notify that the filter and sorter have been changed
+        filter.changed(FilterChange::Different);
+        sorter.changed(SorterChange::Different);
+    });
+```
