feat::> List Widget > String List Start...

--- a/Bustle/GUI_Rust/4.ListWidgets.md
+++ b/Bustle/GUI_Rust/4.ListWidgets.md
@@ -319,3 +319,10 @@ To ensure that our filter and sorter get updated when we modify the numbers, we 
         sorter.changed(SorterChange::Different);
     });
 ```
+
+## **String List**
+
+>> Often, all we want is to display a list of strings. However, if we either need to filter and sort our displayed data or have too many elements to be displayed by `ListBox`, we will still want to use a view. GTK provides a convenient model for this use case: `gtk::StringList`.
+
+Let's see with a small example how to use this API. Filter and sorter is controlled by the factory, so nothing changes here. This is why we will skip this topic here.
+
