feat::> List Widget > String List End...

--- a/Bustle/GUI_Rust/4.ListWidgets.md
+++ b/Bustle/GUI_Rust/4.ListWidgets.md
@@ -326,3 +326,35 @@ To ensure that our filter and sorter get updated when we modify the numbers, we 
 
 Let's see with a small example how to use this API. Filter and sorter is controlled by the factory, so nothing changes here. This is why we will skip this topic here.
 
+We add a bunch of strings to our model.
+
+`Filesystem`: ...../list_widgets/6/main.rs
+
+```rust
+    // Create a `StringList` with number from 0 to 100_000
+    // `StringList` implements FromIterator<String>
+    let model: StringList = (0..=100_000).map(|number| number.to_string()).collect();
+```
+
+Note that we can create a `StringList` directly from an iterator over strings. This means we don't have to create a custom GObject for our model anymore.
+
+As usual, we connect the label to the list item via an expression. Here we can use `StringObject`, which exposes its content via the property "string".
+
+`Filesystem`: ...../list_widgets/6/main.rs
+
+```rust
+    factory.connect_setup(move |_, list_item| {
+        // Create label
+        let label = Label::new(None);
+        let list_item = list_item
+            .downcast_ref::<ListItem>()
+            .expect("Needs to be ListItem");
+        list_item.set_child(Some(&label));
+
+        // Bind `list_item->item->string` to `label->label`
+        list_item
+            .property_expression("item")
+            .chain_property::<StringObject>("string")
+            .bind(&label, "label", Widget::NONE);
+    });
+```
