feat::> Composite Templates > Resources Mid...

--- a/Bustle/GUI_Rust/5.CompositeTemplates.md
+++ b/Bustle/GUI_Rust/5.CompositeTemplates.md
@@ -72,4 +72,66 @@ fn build_ui(app: &Application) {
 }
 ```
 
-Within our code we create a custom widget inheriting from gtk::ApplicationWindow to make use of our template.
+Within our code we create a custom widget inheriting from `gtk::ApplicationWindow` to make use of our template.
+
+`Filesystem`: ...../composite_templates/1/window/mod.rs
+
+```rust
+mod imp;
+
+use glib::Object;
+use gtk::{gio, glib, Application};
+
+glib::wrapper! {
+    pub struct Window(ObjectSubclass<imp::Window>)
+        @extends gtk::ApplicationWindow, gtk::Window, gtk::Widget,
+        @implements gio::ActionGroup, gio::ActionMap, gtk::Accessible, gtk::Buildable,
+                    gtk::ConstraintTarget, gtk::Native, gtk::Root, gtk::ShortcutManager;
+}
+
+impl Window {
+    pub fn new(app: &Application) -> Self {
+        // Create new window
+        Object::builder().property("application", app).build()
+    }
+}
+```
+
+In the implementation struct, we then add the derive macro `gtk::CompositeTemplate`. We also specify that the template information comes from a resource of prefix `/org/gtk-rs/example` containing a file `window.ui`.
+
+One very convenient feature of templates is the template child. You use it by adding a struct member with the same name as one `id` attribute in the template. `TemplateChild` then stores a reference to the widget for later use. This will be useful later, when we want to add a callback to our button.
+
+`Filesystem`: ...../composite_templates/1/window/imp.rs
+
+```rust
+// Object holding the state
+#[derive(CompositeTemplate, Default)]
+#[template(resource = "/org/gtk_rs/example/window.ui")]
+pub struct Window {
+    #[template_child]
+    pub button: TemplateChild<Button>,
+}
+```
+
+Within the `ObjectSubclass` trait, we make sure that **NAME** corresponds to **class** in the template and **ParentType** corresponds to **parent** in the template. We also bind and initialize the template in **class_init** and **instance_init**.
+
+`Filesystem`: ...../composite_templates/1/window/imp.rs
+
+```rust
+// The central trait for subclassing a GObject
+#[glib::object_subclass]
+impl ObjectSubclass for Window {
+    // `NAME` needs to match `class` attribute of template
+    const NAME: &'static str = "MyGtkAppWindow";
+    type Type = super::Window;
+    type ParentType = gtk::ApplicationWindow;
+
+    fn class_init(klass: &mut Self::Class) {
+        klass.bind_template();
+    }
+
+    fn instance_init(obj: &InitializingObject<Self>) {
+        obj.init_template();
+    }
+}
+```
