feat::> Composite Templates > Resources End...

--- a/Bustle/GUI_Rust/5.CompositeTemplates.md
+++ b/Bustle/GUI_Rust/5.CompositeTemplates.md
@@ -135,3 +135,23 @@ impl ObjectSubclass for Window {
     }
 }
 ```
+
+Finally, we connect the callback to the "clicked" signal of `button` within `constructed`. The button is easily available thanks to the stored reference in `self`.
+
+`Filesystem`: ...../composite_templates/1/window/imp.rs
+
+```rust
+// Trait shared by all GObjects
+impl ObjectImpl for Window {
+    fn constructed(&self) {
+        // Call "constructed" on parent
+        self.parent_constructed();
+
+        // Connect to "clicked" signal of `button`
+        self.button.connect_clicked(move |button| {
+            // Set the label to "Hello World!" after the button has been clicked on
+            button.set_label("Hello World!");
+        });
+    }
+}
+```
