feat::> Composite Templates > Custom Widgets Start...

--- a/Bustle/GUI_Rust/5.CompositeTemplates.md
+++ b/Bustle/GUI_Rust/5.CompositeTemplates.md
@@ -155,3 +155,23 @@ impl ObjectImpl for Window {
     }
 }
 ```
+
+## **Custom Widgets**
+
+>> We can also instantiate custom widgets within a template file. First we define `CustomButton` that inherits from `gtk::Button`. As usual, we define the implementation struct within `imp.rs`. Note the `NAME` we define here, we will need it later to refer to it in the template.
+
+`Filesystem`: ...../composite_templates/2/custom_button/imp.rs
+
+```rust
+// Object holding the state
+#[derive(Default)]
+pub struct CustomButton;
+
+// The central trait for subclassing a GObject
+#[glib::object_subclass]
+impl ObjectSubclass for CustomButton {
+    const NAME: &'static str = "MyGtkAppCustomButton";
+    type Type = super::CustomButton;
+    type ParentType = gtk::Button;
+}
+```
