feat::> Composite Templates > Custom Widgets Mid...

--- a/Bustle/GUI_Rust/5.CompositeTemplates.md
+++ b/Bustle/GUI_Rust/5.CompositeTemplates.md
@@ -175,3 +175,31 @@ impl ObjectSubclass for CustomButton {
     type ParentType = gtk::Button;
 }
 ```
+* We also define the public struct in `mod.rs`.
+
+`Filesystem`: ...../composite_templates/2/custom_button/mod.rs
+
+```rust
+mod imp;
+
+glib::wrapper! {
+    pub struct CustomButton(ObjectSubclass<imp::CustomButton>)
+        @extends gtk::Button, gtk::Widget,
+        @implements gtk::Accessible, gtk::Actionable,
+                    gtk::Buildable, gtk::ConstraintTarget;
+}
+```
+
+Since we want to refer to a `CustomButton` now we also have to change the type of the template child to it.
+
+`Filesystem`: ...../composite_templates/2/window/imp.rs
+
+```rust
+// Object holding the state
+#[derive(CompositeTemplate, Default)]
+#[template(resource = "/org/gtk_rs/example/window.ui")]
+pub struct Window {
+    #[template_child]
+    pub button: TemplateChild<CustomButton>,
+}
+```
