--- a/Bustle/GUI_Rust/5.CompositeTemplates.md
+++ b/Bustle/GUI_Rust/5.CompositeTemplates.md
@@ -203,3 +203,26 @@ pub struct Window {
     pub button: TemplateChild<CustomButton>,
 }
 ```
+
+Finally, we can replace `GtkButton` with `MyGtkAppCustomButton` within our composite template. Since the custom button is a direct subclass of `gtk::Button` without any modifications, the behavior of our app stays the same.
+
+`Filesystem`: ...../composite_templates/2/resources/window.ui
+
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<interface>
+  <template class="MyGtkAppWindow" parent="GtkApplicationWindow">
+    <property name="title">My GTK App</property>
+    <child>
+      <object class="MyGtkAppCustomButton" id="button">
+        <property name="label">Press me!</property>
+        <property name="margin-top">12</property>
+        <property name="margin-bottom">12</property>
+        <property name="margin-start">12</property>
+        <property name="margin-end">12</property>  
+      </object>
+    </child>
+  </template>
+</interface>
+```
+
