--- a/Bustle/GUI_Rust/5.CompositeTemplates.md
+++ b/Bustle/GUI_Rust/5.CompositeTemplates.md
@@ -226,3 +226,27 @@ Finally, we can replace `GtkButton` with `MyGtkAppCustomButton` within our compo
 </interface>
 ```
 
+## **Template Callbacks**
+
+>> We can even specify the handlers of signals within composite templates. This can be done with a `<signal>` tag containing the name of the signal and the handler in our Rust code.
+
+`Filesystem`: ...../composite_templates/3/resources/window.ui
+
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<interface>
+  <template class="MyGtkAppWindow" parent="GtkApplicationWindow">
+    <property name="title">My GTK App</property>
+    <child>
+      <object class="MyGtkAppCustomButton" id="button">
+        <signal name="clicked" handler="handle_button_clicked"/>
+        <property name="label">Press me!</property>
+        <property name="margin-top">12</property>
+        <property name="margin-bottom">12</property>
+        <property name="margin-start">12</property>
+        <property name="margin-end">12</property>  
+      </object>
+    </child>
+  </template>
+</interface>
+```
