--- a/Bustle/GUI_Rust/5.CompositeTemplates.md
+++ b/Bustle/GUI_Rust/5.CompositeTemplates.md
@@ -250,3 +250,81 @@ Finally, we can replace `GtkButton` with `MyGtkAppCustomButton` within our compo
   </template>
 </interface>
 ```
+
+Then we define the `handle_button_clicked` with the `template_callbacks` macro applied to it. We can determine the function signature by having a look at the `connect_*` method of the signal we want to handle. In our case that would be `connect_clicked`. It takes a function of type `Fn(&Self)`. `Self` refers to our button. This means that `handle_button_clicked` has a single parameter of type `&CustomButton`.
+
+`Filesystem`: ...../composite_templates/3/window/imp.rs
+
+```rust
+#[gtk::template_callbacks]
+impl Window {
+    #[template_callback]
+    fn handle_button_clicked(button: &CustomButton) {
+        // Set the label to "Hello World!" after the button has been clicked on
+        button.set_label("Hello World!");
+    }
+}
+```
+
+Then we have to bind the template callbacks with `bind_template_callbacks`. We also need to remove the `button.connect_clicked` callback implemented in `window/imp.rs`.
+
+`Filesystem`: ...../composite_templates/3/window/imp.rs
+
+```rust
+// The central trait for subclassing a GObject
+#[glib::object_subclass]
+impl ObjectSubclass for Window {
+    // `NAME` needs to match `class` attribute of template
+    const NAME: &'static str = "MyGtkAppWindow";
+    type Type = super::Window;
+    type ParentType = gtk::ApplicationWindow;
+
+    fn class_init(klass: &mut Self::Class) {
+        klass.bind_template();
+        klass.bind_template_callbacks();
+    }
+
+    fn instance_init(obj: &InitializingObject<Self>) {
+        obj.init_template();
+    }
+}
+```
+
+We can also access the state of our widget. Let's say we want to manipulate a `number` stored in `imp::Window`.
+
+`Filesystem`: ...../composite_templates/4/window/imp.rs
+
+```rust
+// Object holding the state
+#[derive(CompositeTemplate, Default)]
+#[template(resource = "/org/gtk_rs/example/window.ui")]
+pub struct Window {
+    #[template_child]
+    pub button: TemplateChild<CustomButton>,
+    pub number: Cell<i32>,
+}
+```
+
+In order to access the widget's state we have to add `swapped="true"` to the `signal` tag.
+
+`Filesystem`: ...../composite_templates/4/resources/window.ui
+
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<interface>
+  <template class="MyGtkAppWindow" parent="GtkApplicationWindow">
+    <property name="title">My GTK App</property>
+    <child>
+      <object class="MyGtkAppCustomButton" id="button">
+        <signal name="clicked" handler="handle_button_clicked" swapped="true"/>
+        <property name="label">Press me!</property>
+        <property name="margin-top">12</property>
+        <property name="margin-bottom">12</property>
+        <property name="margin-start">12</property>
+        <property name="margin-end">12</property>  
+      </object>
+    </child>
+  </template>
+</interface>
+
+```
