feat::> Composite Templates > Template Callbacks End...

--- a/Bustle/GUI_Rust/5.CompositeTemplates.md
+++ b/Bustle/GUI_Rust/5.CompositeTemplates.md
@@ -326,5 +326,21 @@ In order to access the widget's state we have to add `swapped="true"` to the `si
     </child>
   </template>
 </interface>
+```
 
+Now we can add `&self` as first parameter to `handle_button_clicked`. This lets us access the state of the window and therefore manipulate `number`.
+
+
+`Filesystem`: ...../composite_templates/4/resources/window.ui
+
+```rust
+#[gtk::template_callbacks]
+impl Window {
+    #[template_callback]
+    fn handle_button_clicked(&self, button: &CustomButton) {
+        let number_increased = self.number.get() + 1;
+        self.number.set(number_increased);
+        button.set_label(&number_increased.to_string())
+    }
+}
 ```
