feat::> Composite Templates > Registering Types...

--- a/Bustle/GUI_Rust/5.CompositeTemplates.md
+++ b/Bustle/GUI_Rust/5.CompositeTemplates.md
@@ -344,3 +344,52 @@ impl Window {
     }
 }
 ```
+
+## **Registering Types**
+
+Now that we use template callbacks we don't access the template child anymore. Let's remove it.
+
+`Filesystem`: ...../composite_templates/5/window/imp.rs
+
+```rust
+// Object holding the state
+#[derive(CompositeTemplate, Default)]
+#[template(resource = "/org/gtk_rs/example/window.ui")]
+pub struct Window {
+    pub number: Cell<i32>,
+}
+```
+
+However, when we now run it GTK doesn't see `MyGtkAppCustomButton` as valid object type anymore. So what happened here?
+
+```
+Gtk-CRITICAL **: Error building template class 'MyGtkAppWindow' for an instance of
+                 type 'MyGtkAppWindow': Invalid object type 'MyGtkAppCustomButton'
+```
+
+`Filesystem`: ...../composite_templates/6/window/imp.rs
+
+```rust
+// The central trait for subclassing a GObject
+#[glib::object_subclass]
+impl ObjectSubclass for Window {
+    // `NAME` needs to match `class` attribute of template
+    const NAME: &'static str = "MyGtkAppWindow";
+    type Type = super::Window;
+    type ParentType = gtk::ApplicationWindow;
+
+    fn class_init(klass: &mut Self::Class) {
+        // Register `CustomButton`
+        CustomButton::ensure_type();
+
+        klass.bind_template();
+        klass.bind_template_callbacks();
+    }
+
+    fn instance_init(obj: &InitializingObject<Self>) {
+        obj.init_template();
+    }
+}
+```
+
+We call the ensure_type method within class_init and our app works again.
