--- a/Bustle/GUI_Rust/5.CompositeTemplates.md
+++ b/Bustle/GUI_Rust/5.CompositeTemplates.md
@@ -392,4 +392,4 @@ impl ObjectSubclass for Window {
 }
 ```
 
-We call the ensure_type method within class_init and our app works again.
+We call the `ensure_type` method within `class_init` and our app works again.
